--- a/_thongtinnhanhang.html
+++ b/_thongtinnhanhang.html
@@ -14,12 +14,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="style.css?v=1737848516">
+    <link rel="stylesheet" href="style.css?v=1737849536">
 
     <!--JS-->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="js/app.js?v=1737848516"></script>
+    <script src="js/app.js?v=1737849536"></script>
 
     <style>
         .be-vietnam-pro-100 {
@@ -139,7 +139,7 @@
         <div class="uk-container">
             <div uk-navbar>
                 <div class="uk-navbar-left">
-                    <a href="taikhoan.php" class="uk-navbar-item">
+                    <a href="giohang.php" class="uk-navbar-item">
                         <span class="header__navbar__icon header__navbar__icon--arrow-left"></span>
                     </a>
                 </div>
@@ -160,7 +160,7 @@
                 <div class="uk-margin">
                     <div class="uk-grid uk-grid-12 uk-flex-middle" uk-grid>
                         <div class="uk-width-auto">
-                            <span class="icons__24px icons__24px--location-3"></span>
+                            <span class="icons__24px icons__24px--location"></span>
                         </div>
                         <div class="uk-width-expand">
                             <div class="be-vietnam-pro-600 fz-14px text-000">Thông tin nhận hàng</div>
