update: page dangky

--- a/_dangky.html
+++ b/_dangky.html
@@ -14,12 +14,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="style.css?v=1737876608">
+    <link rel="stylesheet" href="style.css?v=1737876835">
 
     <!--JS-->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="js/app.js?v=1737876608"></script>
+    <script src="js/app.js?v=1737876835"></script>
 
     <style>
         .be-vietnam-pro-100 {
@@ -236,7 +236,7 @@
                     <div class="dangky__divider uk-position-relative bg-F6F6F6 item-15px">
                         <span class="uk-position-center uk-position-z-index bg-FFF">Hoặc</span>
                     </div>
-                    <div class="uk-child-width-expand item-15px uk-grid" uk-grid>
+                    <div class="uk-child-width-expand item-15px uk-grid uk-grid-12" uk-grid>
                         <div>
                             <a href="" class="uk-width uk-border-pill dangky__btn uk-flex uk-flex-middle uk-flex-center bg-F6F6F6">
                                 <span class="icons__20px icons__20px--login-google"></span>
