update: page xacthucemail

--- a/_xacthucmail1.html
+++ b/_xacthucmail1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="REFRESH" content="1800"/>
-    <title>Đăng ký - Thuvienso App</title>
+    <title>Xác thực Email - Thuvienso App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
     <!--Google Fonts-->
@@ -14,12 +14,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="style.css?v=1737885837">
+    <link rel="stylesheet" href="style.css?v=1737885906">
 
     <!--JS-->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="js/app.js?v=1737885837"></script>
+    <script src="js/app.js?v=1737885906"></script>
 
     <style>
         .be-vietnam-pro-100 {
@@ -263,11 +263,19 @@
                 <div class="uk-grid item-24px uk-child-width-expand uk-child-width-auto@s uk-grid-small uk-text-center uk-flex-center" uk-grid>
                     <div>
                         <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
-                            1                        </div>
+                            9                        </div>
                     </div>
                     <div>
                         <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
-                            7                        </div>
+                            0                        </div>
+                    </div>
+                    <div>
+                        <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
+                            4                        </div>
+                    </div>
+                    <div>
+                        <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
+                            6                        </div>
                     </div>
                     <div>
                         <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
@@ -275,15 +283,7 @@
                     </div>
                     <div>
                         <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
-                            3                        </div>
-                    </div>
-                    <div>
-                        <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
-                            9                        </div>
-                    </div>
-                    <div>
-                        <div class="xacthucmail__number uk-margin-auto fz-20px be-vietnam-pro-500 text-0D1017 rounded-8px bg-F7F7F8 uk-flex uk-flex-middle uk-flex-center">
-                            1                        </div>
+                            6                        </div>
                     </div>
                 </div>
                 <div class="item-12px">
