update: page dangnhap

--- a/_dangnhap.html
+++ b/_dangnhap.html
@@ -14,12 +14,12 @@
 
   <!--CSS-->
   <link rel="stylesheet" href="dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="style.css?v=1737902830">
+  <link rel="stylesheet" href="style.css?v=1737902943">
 
   <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-  <script src="js/app.js?v=1737902830"></script>
+  <script src="js/app.js?v=1737902943"></script>
 
   <style>
     .be-vietnam-pro-100 {
@@ -231,7 +231,7 @@
       <div class="uk-child-width-expand uk-grid uk-grid-8" uk-grid>
         <div>
           <button class="danhmucchitiet__fillter__btn item-28px danhmucchitiet__fillter__btn--submit uk-button uk-width uk-border-pill fz-16px be-vietnam-pro-600 uk-flex uk-flex-center uk-flex-middle gap-4">
-            Đăng ký
+            Đăng nhập
           </button>
           <div class="dangky__divider uk-position-relative bg-F6F6F6 item-15px">
             <span class="uk-position-center uk-position-z-index bg-FFF">Hoặc</span>
@@ -248,7 +248,7 @@
               </a>
             </div>
           </div>
-          <div class="uk-text-center item-24px fz-14px text-966412"><span class="be-vietnam-pro-500 text-6B6B6B">Bạn đã có tài khoản?</span> <a href="" class="be-vietnam-pro-600 uk-link-toggle">Đăng nhập</a></div>
+          <div class="uk-text-center item-24px fz-14px text-966412"><span class="be-vietnam-pro-500 text-6B6B6B">Bạn chưa có tài khoản?</span> <a href="" class="be-vietnam-pro-600 uk-link-toggle">Đăng ký</a></div>
         </div>
       </div>
     </div>
