fix: update layout footer

--- a/_thongtintaikhoan.html
+++ b/_thongtintaikhoan.html
@@ -14,12 +14,12 @@
 
   <!--CSS-->
   <link rel="stylesheet" href="dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="style.css?v=1731123743">
+  <link rel="stylesheet" href="style.css?v=1738114122">
 
   <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-  <script src="js/app.js?v=1731123743"></script>
+  <script src="js/app.js?v=1738114122"></script>
 
   <style>
     .be-vietnam-pro-100 {
@@ -282,15 +282,19 @@
       </div>
     </div>
   </div>
-  <div class="uk-container uk-container-expand uk-margin-remove-left uk-margin-remove-right danhmucchitiet__fillter__section">
+  <div class="uk-container uk-container-expand uk-margin-remove-left uk-margin-remove-right danhmucchitiet__fillter__section uk-position-bottom uk-position-fixed">
     <div class="uk-section-xsmall" style="padding: 16px 0;">
       <div class="uk-child-width-expand uk-grid uk-grid-8" uk-grid>
         <div>
-          <button class="danhmucchitiet__fillter__btn danhmucchitiet__fillter__btn--submit uk-button uk-width uk-border-pill fz-16px be-vietnam-pro-600">Lưu thay đổi</button>
+          <button class="danhmucchitiet__fillter__btn danhmucchitiet__fillter__btn--submit uk-button uk-width uk-border-pill fz-16px be-vietnam-pro-600">
+            Lưu thay đổi
+          </button>
         </div>
       </div>
     </div>
   </div>
+
+
 </div>
 <!--/app-->
 </body>
