--- a/_giohang.html
+++ b/_giohang.html
@@ -14,12 +14,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="style.css?v=1737785484">
+    <link rel="stylesheet" href="style.css?v=1738114050">
 
     <!--JS-->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="js/app.js?v=1737785484"></script>
+    <script src="js/app.js?v=1738114050"></script>
 
     <style>
         .be-vietnam-pro-100 {
@@ -181,7 +181,7 @@
                     </div>
                 </div>
                 <div class="uk-width-auto">
-                    <a href="">
+                    <a href="thongtinnhanhang.php">
                         <span class="icons__24px icons__24px--arrows-right"></span>
                     </a>
                 </div>
@@ -672,6 +672,8 @@
             </div>
         </div>
     </div>
+
+
 </div>
 <!--/app-->
 </body>
