feat: page thanhtoanbangvi-dusodu

--- a/_thanhtoanchuyenkhoan-success.html
+++ b/_thanhtoanchuyenkhoan-success.html
@@ -14,12 +14,12 @@
 
     <!--CSS-->
     <link rel="stylesheet" href="dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="style.css?v=1738300996">
+    <link rel="stylesheet" href="style.css?v=1738301373">
 
     <!--JS-->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="js/app.js?v=1738300996"></script>
+    <script src="js/app.js?v=1738301373"></script>
 
     <style>
         .be-vietnam-pro-100 {
@@ -369,10 +369,10 @@
                 </svg>
             </div>
             <h2 class="uk-modal-title uk-margin-remove-bottom item-28px fz-20px be-vietnam-pro-600 lh-120 text-181C32">Thanh toán thành công</h2>
-            <div class="fz-14px lh-142 text-4B5563">Hệ thống sẽ gửi lại email xác nhận trong thời gian sớm. Nếu có trục trặc, vui lòng liên hệ tới tổng đài để được hỗ trợ.</div>
+            <div class="fz-14px lh-142 text-4B5563 item-4px">Hệ thống sẽ gửi lại email xác nhận trong thời gian sớm. Nếu có trục trặc, vui lòng liên hệ tới tổng đài để được hỗ trợ.</div>
             <div class="item-24px">
                 <button class="danhmucchitiet__fillter__btn item-28px danhmucchitiet__fillter__btn--submit uk-button uk-width uk-border-pill fz-16px be-vietnam-pro-600 uk-flex uk-flex-center uk-flex-middle gap-4">
-                    Về trang chủ
+                    Xem chi tiết
                 </button>
                 <button type="button" class="bg-F6F6F6 uk-modal-close text-000 danhmucchitiet__fillter__btn item-12px uk-button uk-width uk-border-pill fz-16px be-vietnam-pro-600 uk-flex uk-flex-center uk-flex-middle gap-4">
                     Đóng
