feat: page thanhtoanbangvi

--- a/_thanhtoanbangvi-dusodu.html
+++ b/_thanhtoanbangvi-dusodu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="REFRESH" content="1800"/>
-  <title>Thanh toán chuyển khoản/success - Thuvienso App</title>
+  <title>Thanh toán bằng ví/đủ số dư - Thuvienso App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
   <!--Google Fonts-->
@@ -14,12 +14,12 @@
 
   <!--CSS-->
   <link rel="stylesheet" href="dist/css/uikit.min.css" />
-  <link rel="stylesheet" href="style.css?v=1738301482">
+  <link rel="stylesheet" href="style.css?v=1738301587">
 
   <!--JS-->
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-  <script src="js/app.js?v=1738301482"></script>
+  <script src="js/app.js?v=1738301587"></script>
 
   <style>
     .be-vietnam-pro-100 {
